--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -287,59 +287,11 @@ config MACH_JET
 	help
 	  Support for the HTC Jet
 
-config MACH_JEWEL_DD
-        depends on ARCH_MSM8960
-        bool "Jel_dd"
-        help
-          Support for the HTC Jewel_DD
-
 config MACH_VALENTE_WX
 	depends on ARCH_MSM8960
 	bool "Valente#WX"
 	help
 	  Support for the HTC Valente#WX
-
-config MACH_VALENTE_WX_C9
-	depends on ARCH_MSM8960
-	bool "Valente#WX_C9"
-	help
-	  Support for the HTC Valente#WX_C9
-
-config MACH_K2_CL
-	depends on ARCH_MSM8930
-	bool "K2_CL"
-	help
-	  Support for the HTC K2_#CL
-
-config MACH_K2_PLC_CL
-	depends on ARCH_MSM8930
-	bool "K2_PLC_CL"
-	help
-	  Support for the HTC K2_PLC#CL
-
-config MACH_K2_U
-	depends on ARCH_MSM8930
-	bool "K2_U"
-	help
-	  Support for the HTC K2_U
-
-config MACH_K2_UL
-	depends on ARCH_MSM8930
-	bool "K2_UL"
-	help
-	  Support for the HTC K2_UL
-
-config MACH_EVITA_UTL
-        depends on ARCH_MSM8960
-        bool "Evita#UTL"
-        help
-          Support for the HTC Evita#UTL
-
-config MACH_OPERAUL
-	depends on ARCH_MSM8930
-	bool "OPERAUL"
-	help
-	  Support for the HTC OPERAUL
 
 config ARCH_FSM9XXX
 	bool "FSM9XXX"
@@ -1156,12 +1108,6 @@ config HTC_ONMODE_CHARGING
 	help
 		support on mode charing icon
 
-config BUILD_EDIAG
-        bool "Build in embedded diag fixes"
-        default n
-        help
-          For embedded diag we need to do some additional fixes.
-
 config HTC_FD_MONITOR
 	bool "fd operation monitor mechanism"
 	default n
@@ -1465,6 +1411,12 @@ config MSM_SMD_DEBUG
 	  Support for debugging the SMD for communication
 	  between the ARM9 and ARM11
 
+config MSM_SEND_SIGNAL_DEBUG
+        bool "MSM send_signal debug support"
+        help
+          This option enables kernel debug log and dump_stack
+          if any processes send signal to assinged processes
+
 config MSM_SDIO_AL
 	depends on ((ARCH_MSM7X30 || MACH_MSM8X60_FUSN_FFA || MACH_TYPE_MSM8X60_FUSION) && HAS_WAKELOCK)
 	default y
@@ -1764,6 +1716,29 @@ config MSM_CPU_FREQ_MIN
 	default 245760
 
 endif # CPU_FREQ_MSM
+
+config INTELLI_PLUG
+	bool "Enable intelli-plug cpu hotplug driver"
+	default n
+	help
+	  Generic Intelli-plug cpu hotplug driver for ARM SOCs
+
+config MSM_CPUFREQ_LIMITER
+	tristate "MSM CPU frequency limiter"
+	default n
+	help
+	  This driver limits MSM CPU frequency through sysfs file system.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_stats.
+
+	  If in doubt, say N.
+
+config CPU_VOLTAGE_TABLE
+	bool "Enable CPU Voltage Table via sysfs for adjustements"
+	default n
+	help
+	  Krait User Votlage Control
 
 config MSM_CPU_AVS
 	bool "Enable software controlled Adaptive Voltage Scaling (AVS)"
@@ -2211,7 +2186,7 @@ config MSM_LPASS_SSR_ENABLE
 
 config MSM_WCNSS_SSR_ENABLE
 	bool "MSM 8960 WCNSS subsystem restart enable"
-	depends on (ARCH_MSM8960)
+	depends on (ARCH_MSM8960 && MSM_SSR_INDEPENDENT)
 	help
 	 This option enables the WCNSS subsystem restart for MSM8960
 
@@ -2465,18 +2440,6 @@ config MSM8930_ONLY
 		help
 		 Help to separate MSM8930 code from other ARCH
 
-config AUDIO_LOW_LATENCY
-		default n
-		bool "For AUDIO_LOW_LATENCY only"
-		help
-		 Help to separate the AUDIO_LOW_LATENCY from other board config
-
-config AUDIO_24BIT
-		default n
-		bool "For AUDIO_24BIT only"
-		help
-		 Help to separate the AUDIO_24BIT from other board config
-
 config MSM_QDSP6_APR
 	bool "Audio QDSP6 APR support"
 	depends on MSM_SMD
@@ -2689,14 +2652,6 @@ config MSM_L2_ERP_2BIT_PANIC
 	  For production builds, it may be acceptable to say 'N' here, since
 	  an uncorrectable error might not necessarily cause further problems.
 
-config IGNORE_L2_FALSE_ALRAM
-	bool "Ignore harmless L2 port error"
-	depends on MSM_CACHE_ERP
-	default y
-	help
-	  L2 cache will sometimes generate port error which is consider harmless.
-	  Ignore the error if trigger rate is low.
-
 config MSM_DCVS
 	bool "Use MSM DCVS for CPU/GPU Frequency control"
 	depends on MSM_SCM
@@ -2721,13 +2676,6 @@ config ACPU_CUSTOM_FREQ_SUPPORT
 	default n
 	help
 	  Adds support for custom frequency table adjustments.
-
-config ACPU_SPEED_BIN_FREQ_SUPPORT
-	bool "Custom speed bin frequency setting"
-	default n
-	depends on ACPU_CUSTOM_FREQ_SUPPORT
-	help
-	  Add support for adjusting ACPU frequency table according to ACPU speed bin.
 
 config ACPU_MAX_FREQ
 	int "Maximum supported frequency"
@@ -2775,24 +2723,6 @@ config MACH_DELUXE_J
         help
           Support for the HTC APQ8064 DELUXE_J.
 
-config MACH_DELUXE_UB1
-        depends on ARCH_APQ8064
-        bool "APQ8064 DELUXE_UB1"
-        help
-          Support for the HTC APQ8064 DELUXE_UB1.
-
-config MACH_DELUXE_U
-        depends on ARCH_APQ8064
-        bool "APQ8064 DELUXE_U"
-        help
-          Support for the HTC APQ8064 DELUXE_U.
-
-config MACH_DELUXE_UL
-        depends on ARCH_APQ8064
-        bool "APQ8064 DELUXE_UL"
-        help
-          Support for the HTC APQ8064 DELUXE_UL.
-
 config MACH_IMPRESSION_J
         depends on ARCH_APQ8064
         bool "APQ8064 IMPRESSION_J"
@@ -2805,47 +2735,11 @@ config MACH_M7_UL
         help
           Support for the HTC APQ8064 M7_UL.
 
-config MACH_M7_U
-        depends on ARCH_APQ8064
-        bool "APQ8064 M7_U"
-        help
-          Support for the HTC APQ8064 M7_U.
-
-config MACH_M7_WLS
-        depends on ARCH_APQ8064
-        bool "APQ8064 M7_WLS"
-        help
-          Support for the HTC APQ8064 M7_WLS.
-
-config MACH_M7_WLV
-        depends on ARCH_APQ8064
-        bool "APQ8064 M7_WLV"
-        help
-          Support for the HTC APQ8064 M7_WLV.
-
-config MACH_M7_DCG
-        depends on ARCH_APQ8064
-        bool "APQ8064 M7_DCG"
-        help
-          Support for the HTC APQ8064 M7_DCG.
-
-config MACH_M7_DUG
-        depends on ARCH_APQ8064
-        bool "APQ8064 M7_DUG"
-        help
-          Support for the HTC APQ8064 M7_DUG.
-
 config QSC_MODEM
         default n
         bool "QMC QSC MODEM"
         help
           Support for the QMC QSC Modem.
-
-config MACH_VILLEC2
-        depends on ARCH_MSM8X60
-        bool "VILLEC2"
-        help
-          Support for the HTC VILLEC2 device.
 
 config HTC_HEADSET_ONE_WIRE
 	tristate "HTC 1-wire headset detection driver"
@@ -2907,11 +2801,5 @@ config QUALCOMM_WLAN_PXO
 	bool "Use PXO for WLAN clock source"
 	help
 	  Use PXO for clock source of WLAN chip
-
-config IOEXTENDER
-        default n
-        bool "Enable IOEXTENDER feature"
-	help
-	 To support IOEXTENDER feature
 endif
 
